--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "axios": "^1.8.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.15",
+    "tailwind-merge": "^3.0.2",
+    "tailwind-scrollbar": "^3.0.0",
+    "tailwindcss": "^3.3.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -54,5 +59,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31"
   }
 }
